[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uvicorn"
dynamic = ["version"]
description = "The lightning-fast ASGI server."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.7"
authors = [
    { name = "Tom Christie", email = "tom@tomchristie.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "click>=7.0",
    "h11>=0.8",
    "typing-extensions;python_version < '3.8'",
]

[project.optional-dependencies]
standard = [
    "colorama>=0.4;sys_platform == 'win32'",
    "httptools>=0.5.0",
    "python-dotenv>=0.13",
    "PyYAML>=5.1",
    "uvloop>=0.14.0,!=0.15.0,!=0.15.1; sys_platform != 'win32' and (sys_platform != 'cygwin' and platform_python_implementation != 'PyPy')",
    "watchfiles>=0.13",
    "websockets>=10.4",
]

[project.scripts]
uvicorn = "uvicorn.main:main"

[project.urls]
Changelog = "https://github.com/encode/uvicorn/blob/master/CHANGELOG.md"
Funding = "https://github.com/sponsors/encode"
Homepage = "https://www.uvicorn.org/"
Source = "https://github.com/encode/uvicorn"

[tool.hatch.version]
path = "uvicorn/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/uvicorn"]

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["B904", "B028"]

[tool.ruff.isort]
combine-as-imports = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
# NOTE: If you are seeing this, feel free to create a PR to cover the below files.
exclude = """(?x)
  ^(
    |tests/protocols/test_utils.py
  )$
"""

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-rxXs --strict-config --strict-markers"
xfail_strict = true
filterwarnings = [
    "error",
    'ignore: \"watchgod\" is deprecated\, you should switch to watchfiles \(`pip install watchfiles`\)\.:DeprecationWarning',
    "ignore:Uvicorn's native WSGI implementation is deprecated.*:DeprecationWarning",
    "ignore: 'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning"
]

[tool.coverage.run]
source_pkgs = ["uvicorn", "tests"]
plugins = ["coverage_conditional_plugin"]

[tool.coverage.report]
precision = 2
fail_under = 96.57
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.coverage_conditional_plugin.rules]
py-win32 = "sys_platform == 'win32'"
py-not-win32 = "sys_platform != 'win32'"
py-linux = "sys_platform == 'linux'"
py-darwin = "sys_platform == 'darwin'"
py-gte-38 = "sys_version_info >= (3, 8)"
py-lt-38 =  "sys_version_info < (3, 8)"
py-gte-39 = "sys_version_info < (3, 9)"
py-lt-39 = "sys_version_info < (3, 9)"
