[metadata]
name = uvicorn
url = https://github.com/encode/uvicorn
license = BSD
description = The lightning-fast ASGI server.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Christie
author_email = tom@tomchristie.com
include_package_data = True,
classifiers =
    Development Status :: 4 - Beta"
    Environment :: Web Environment"
    Intended Audience :: Developers"
    License :: OSI Approved :: BSD License"
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
package_dir =
    = uvicorn
install_requires =
    asgiref>=3.3.4
    click>=7.*
    h11>=0.8
    typing-extensions; python_version < '3.8'

[options.extras_require]
standard =
    PyYAML>=5.1
    colorama>=0.4; sys_platform == 'win32'
    httptools==0.2.*
    python-dotenv>=0.13"
    uvloop>=0.14.0,!=0.15.0,!=0.15.1; sys_platform != 'win32' and (sys_platform != 'cygwin' and platform_python_implementation != 'PyPy')
    watchgod>=0.6
    websockets>=9.1
dev =
    async_generator; python_version < '3.7'
    coverage
    cryptography
    httpx
    pytest
    pytest-asyncio
    pytest-mock
    trustme
    wsproto

[options.entry_points]
console_scripts =
    uvicorn = uvicorn.main:main

[flake8]
ignore = W503, E203, B305
max-line-length = 88

